# passwd

./: Makefile.in  aclocal.m4  configure  configure.in  mkinstalldirs  passwd.1  passwd.c
